--- a/house-party-loyalty.html
+++ b/house-party-loyalty.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Senate Attendance</title>
+    <title>Senate Party Loyalty</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
@@ -18,10 +18,10 @@
 
     <div class="row ">
         <div class="col-md-3 col-sm-6 mb-30px">
-            <img src="./image/tgif-logo.png" alt="man with magnifying glass">
+            <img src="./image/capitol-icon.jpg" alt="man with magnifying glass">
         </div>
         <div class="col-md-9 col-sm-6 align-self-center pull-left">
-            <h1>Transparent Government in Fact</h1>
+            <h1 class="main-header">Transparent Government in Fact</h1>
         </div>
     </div>
     <div class="row justify-content-end">
@@ -36,11 +36,11 @@
 
         <div class="dropdown">
 
-            <a class="nav-item nav-link active dropdown-toggle" data-toggle="dropdown" id="Congress113Dropdown"
+            <a class="nav-item nav-link dropdown-toggle" data-toggle="dropdown" id="Congress113Dropdown"
                 aria-haspopup="true" aria-expanded="false" href="#">Congress 113</a>
 
             <div class="dropdown-menu">
-                <a class="navbar nav-item nav-link  active" href="./senate-data.html">Senate</a>
+                <a class="navbar nav-item nav-link" href="./senate-data.html">Senate</a>
                 <a class="nav-link nav-item" href="./house-data.html">House</a>
             </div>
         </div>
@@ -58,12 +58,12 @@
 
         <div class="dropdown">
 
-            <a class="nav-item nav-link dropdown-toggle" data-toggle="dropdown" id="Congress113Dropdown"
+            <a class="nav-item active nav-link dropdown-toggle" data-toggle="dropdown" id="Congress113Dropdown"
                 aria-haspopup="true" aria-expanded="false" href="#">Party Loyalty</a>
 
             <div class="dropdown-menu">
                 <a class="nav-link nav-item" href="./senate-party-loyalty.html">Senate</a>
-                <a class="nav-link nav-item" href="./house-party-loyalty.html">House</a>
+                <a class="nav-link nav-item active" href="./house-party-loyalty.html">House</a>
             </div>
         </div>
     </nav>
@@ -100,10 +100,10 @@
 
                     <table class="table table-bordered table-striped">
                         <thead>
-                            <tr>
-                                <th class="column width_1">Party</th>
-                                <th class="column width_1">Number of Reps</th>
-                                <th class="column width_1">% Voted with Party</th>
+                            <tr class="navy-blue">
+                                <th class="font-white">Party</th>
+                                <th class="font-white">Number of Reps</th>
+                                <th class="font-white">% Voted with Party</th>
                             </tr>
                         </thead>
                         <tbody id="senate-attendance">
@@ -122,10 +122,10 @@
 
                     <table class="table table-bordered table-striped">
                         <thead>
-                            <tr>
-                                <th class="column width_1">Party</th>
-                                <th class="column width_1">Number Party Votes</th>
-                                <th class="column width_1">% Party Votes</th>
+                            <tr class="navy-blue">
+                                <th class="font-white">Party</th>
+                                <th class="font-white">Nº of Votes with Party</th>
+                                <th class="font-white">% Party Votes</th>
                             </tr>
                         </thead>
                         <tbody id="least-loyal">
@@ -142,10 +142,10 @@
 
                     <table class="table table-bordered table-striped">
                         <thead>
-                            <tr>
-                                <th class="column width_1">Party</th>
-                                <th class="column width_1">Number Party Votes</th>
-                                <th class="column width_1">% Party Votes</th>
+                            <tr class="navy-blue">
+                                <th class="font-white">Party</th>
+                                <th class="font-white">Nº of Votes with Party</th>
+                                <th class="font-white">% Party Votes</th>
                             </tr>
                         </thead>
                         <tbody tbody id="most-loyal">
@@ -187,8 +187,7 @@
     <script src="./js/pro-congress-113-house.js"></script>
     <script src="./js/main.js"></script>
     <script src="/Users/christianbaidoo/Desktop/TGIF/js/statistics.js"></script>
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
+    <script src="/Users/christianbaidoo/Desktop/TGIF/js/loyal.js"></script>
 
     <!-- jQuery library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
