--- a/senate-party-loyalty.html
+++ b/senate-party-loyalty.html
@@ -13,14 +13,26 @@
 </head>
 
 
+<!-- <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Senate Party Loyalty</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
+    <link rel="stylesheet" href="./css/main.css">
+</head> -->
+
+
 <body class="container" id="top">
 
     <div class="row ">
         <div class="col-md-3 col-sm-6 mb-30px">
-            <img src="./image/tgif-logo.png" alt="man with magnifying glass">
+            <img src="./image/capitol-icon.jpg" alt="man with magnifying glass">
         </div>
         <div class="col-md-9 col-sm-6 align-self-center pull-left">
-            <h1>Transparent Government in Fact</h1>
+            <h1 class="main-header">Transparent Government in Fact</h1>
         </div>
     </div>
     <div class="row justify-content-end">
@@ -29,17 +41,19 @@
         </div>
     </div>
 
-    <nav class="navbar navbar-expand-sm navbar-light bg-light nav-tabs">
+    <!-- navy-blue -->
+
+    <nav class="navbar navbar-expand-sm  nav-tabs">
 
         <a href="./index.html" class="navbar nav-item nav-link">Home</a>
 
         <div class="dropdown">
 
-            <a class="nav-item nav-link active dropdown-toggle" data-toggle="dropdown" id="Congress113Dropdown"
+            <a class="nav-item nav-link dropdown-toggle" data-toggle="dropdown" id="Congress113Dropdown"
                 aria-haspopup="true" aria-expanded="false" href="#">Congress 113</a>
 
             <div class="dropdown-menu">
-                <a class="navbar nav-item nav-link  active" href="./senate-data.html">Senate</a>
+                <a class="navbar nav-item nav-link" href="./senate-data.html">Senate</a>
                 <a class="nav-link nav-item" href="./house-data.html">House</a>
             </div>
         </div>
@@ -57,11 +71,11 @@
 
         <div class="dropdown">
 
-            <a class="nav-item nav-link dropdown-toggle" data-toggle="dropdown" id="Congress113Dropdown"
+            <a class="nav-item active nav-link dropdown-toggle" data-toggle="dropdown" id="Congress113Dropdown"
                 aria-haspopup="true" aria-expanded="false" href="#">Party Loyalty</a>
 
             <div class="dropdown-menu">
-                <a class="nav-link nav-item" href="./senate-party-loyalty.html">Senate</a>
+                <a class="nav-link nav-item active" href="./senate-party-loyalty.html">Senate</a>
                 <a class="nav-link nav-item" href="./house-party-loyalty.html">House</a>
             </div>
         </div>
@@ -95,10 +109,10 @@
 
                     <table class="table table-bordered table-striped">
                         <thead>
-                            <tr>
-                                <th class="column width_1">Party</th>
-                                <th class="column width_1">Number of Reps</th>
-                                <th class="column width_1">% Voted with Party</th>
+                            <tr class="navy-blue">
+                                <th class="column width_1 font-white">Party</th>
+                                <th class="column width_1 font-white">Number of Reps</th>
+                                <th class="column width_1 font-white">% Voted with Party</th>
                             </tr>
                         </thead>
                         <tbody id="senate-attendance">
@@ -117,10 +131,10 @@
 
                     <table class="table table-bordered table-striped">
                         <thead>
-                            <tr>
-                                <th class="column width_1">Party</th>
-                                <th class="column width_1">Number Party Votes</th>
-                                <th class="column width_1">% Party Votes</th>
+                            <tr class="navy-blue">
+                                <th class="column width_1 font-white">Party</th>
+                                <th class="column width_1 font-white">Nº of Votes with Party</th>
+                                <th class="column width_1 font-white">% Party Votes</th>
                             </tr>
                         </thead>
                         <tbody id="least-loyal">
@@ -137,10 +151,10 @@
 
                     <table class="table table-bordered table-striped">
                         <thead>
-                            <tr>
-                                <th class="column width_1">Party</th>
-                                <th class="column width_1">Number Party Votes</th>
-                                <th class="column width_1">% Party Votes</th>
+                            <tr class="navy-blue">
+                                <th class="column width_1 font-white">Party</th>
+                                <th class="column width_1 font-white">Nº of Votes with Party</th>
+                                <th class="column width_1 font-white">% Party Votes</th>
                             </tr>
                         </thead>
                         <tbody tbody id="most-loyal">
@@ -179,8 +193,8 @@
     <script src="./js/pro-congress-113-senate.js"></script>
     <script src="./js/main.js"></script>
     <script src="./js/statistics.js"></script>
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
+    <script src="/Users/christianbaidoo/Desktop/TGIF/js/loyal.js"></script>
+
 
     <!-- jQuery library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
