fetched data using AJAX

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
       TGIF works to disclose information in forms that the public can readily find and use. We solicit public
       feedback
-      to identify information of greatest use to the <span id="dots">public.</span>
+      to identify information of greatest use to the public.<span id="dots"> </span>
     </p>
 
     <button type="button" onclick="showMoreOrLess()" class="btn btn-info" id="myBtn" data-toggle="collapse"
