--- a/senate-data.html
+++ b/senate-data.html
@@ -91,6 +91,7 @@
     <!-- table-striped table hover -->
 
     <form class="checkbox">
+        Filter by:
         <input type="checkbox" id="republican" class="checkbox">
         <label for="republican">Republican</label>
         <input type="checkbox" id="democrat">
@@ -127,8 +128,12 @@
 
         </tbody>
     </table>
+    <div id="loader"></div>
 
-    <button type="button" class="btn btn-info" data-target="#history"><a href="#top">Back to the top</a></button>
+    <button type="button" class="btn btn-info" data-target="#top"><a href="#top" class="font-white"> Back to the top</a>
+    </button>
+
+    <!-- <button type="button" class="btn btn-info" data-target="#history"><a href="#top"></a></button> -->
 
 
 
@@ -150,8 +155,9 @@
 
     <!-- <pre id="senate-data"></pre> -->
 
-    <script src="./js/pro-congress-113-senate.js"></script>
-    <script src="./js/main.js"></script>
+    <!-- <script src="./js/pro-congress-113-senate.js"></script>
+    <script src="./js/main.js"></script> -->
+    <script src="/Users/christianbaidoo/Desktop/TGIF/newtest.js"></script>
 
 
     <!-- jQuery library -->
