--- a/house-data.html
+++ b/house-data.html
@@ -91,7 +91,7 @@
         </div>
     </section> -->
 
-    <form class="checkbox">
+    <form class="checkbox"> Filter by Party:
         <input type="checkbox" id="republican" class="checkbox">
         <label for="republican">Republican</label>
         <input type="checkbox" id="democrat">
@@ -99,7 +99,6 @@
         <input type="checkbox" id="independent">
         <label for="independent">Independent</label>
     </form>
-
 
 
 
@@ -133,13 +132,21 @@
 
     </table>
 
+    <div id="loader"></div>
 
-    <div class="top">
-        <a href="#top">Back to the top</a>
-    </div>
+
+
+    <button type="button" class="btn btn-info" data-target="#top"><a href="#top" class="font-white"> Back to the top</a>
+    </button>
 
     <footer class="page-footer font-small blue">
         <div class="footer-copyright text-center py-3"> &copy; 2019 Copyright: All Rights Reserved
+        </div>
+        <div class="social">
+            <a href="#" class="fa fa-facebook"></a>
+            <a href="#" class="fa fa-twitter"></a>
+            <a href="#" class="fa fa-linkedin"></a>
+
         </div>
     </footer>
 
@@ -150,8 +157,9 @@
 
     <!-- <pre id="senate-data"></pre> -->
 
-    <script src="./js/pro-congress-113-house.js"></script>
-    <script src="./js/main.js"></script>
+    <!-- <script src="./js/pro-congress-113-house.js"></script>
+    <script src="./js/main.js"></script> -->
+    <script src="/Users/christianbaidoo/Desktop/TGIF/newtest.js"></script>
     <!-- jQuery library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
@@ -160,6 +168,7 @@
 
     <!-- Latest compiled JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"> </script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </body>
 
 </html>
