--- a/senate-attendance.html
+++ b/senate-attendance.html
@@ -160,11 +160,11 @@
 
 
 
+    <button type="button" class="btn btn-info" data-target="#top">Back to the top</button>
 
-
-    <div class="top">
-        <a href="#top">Back to the top</a>
-    </div>
+    <!-- <div class="top">
+        <a href="#top"></a>
+    </div> -->
 
 
     <footer class="page-footer font-small blue">
@@ -175,8 +175,9 @@
 
 
 
-    <script src="./js/pro-congress-113-senate.js"></script>
-    <script src="./js/main.js"></script>
+    <!-- <script src="./js/pro-congress-113-senate.js"></script>
+    <script src="./js/main.js"></script> -->
+    <script src="/Users/christianbaidoo/Desktop/TGIF/newtest.js"></script>
     <script src="/Users/christianbaidoo/Desktop/TGIF/js/statistics.js"></script>
 
     <!-- jQuery library -->
