refactored all js files to just one

--- a/house-attendance.html
+++ b/house-attendance.html
@@ -92,7 +92,7 @@
 
                 <div class="col-md-6 col-sm-6">
                     <div class="text-aling-right"></div>
-                    <h4>Senate at a glance</h4>
+                    <h4>House at a glance</h4>
 
                     <table class="table table-bordered table-striped">
                         <thead>
@@ -102,7 +102,7 @@
                                 <th class="font-white">% Voted with Party</th>
                             </tr>
                         </thead>
-                        <tbody id="senate-attendance">
+                        <tbody id="house-attendance">
 
                         </tbody>
                     </table>
@@ -119,8 +119,8 @@
                     <table class="table table-bordered table-striped">
                         <thead>
                             <tr class="navy-blue">
-                                <th class="font-white">Party</th>
-                                <th class="font-white">Number of Missed Votes</th>
+                                <th class="font-white">Name</th>
+                                <th class="font-white">Nº of Missed Votes</th>
                                 <th class="font-white">% Missed</th>
                             </tr>
                         </thead>
@@ -139,8 +139,8 @@
                     <table class="table table-bordered table-striped">
                         <thead>
                             <tr class="navy-blue">
-                                <th class="font-white column width _1">Party</th>
-                                <th class="font-white">Number of Missed Votes</th>
+                                <th class="font-white column width _1">Name</th>
+                                <th class="font-white">Nº of Missed Votes</th>
                                 <th class="font-white">% Missed</th>
                             </tr>
                         </thead>
@@ -156,6 +156,9 @@
             </div>
 
         </div>
+
+        <div id="loader"></div>
+
     </section>
 
 
@@ -167,6 +170,12 @@
     <footer class="page-footer font-small blue">
         <div class="footer-copyright text-center py-3"> &copy; 2019 Copyright: All Rights Reserved
         </div>
+        <div class="social">
+            <a href="#" class="fa fa-facebook"></a>
+            <a href="#" class="fa fa-twitter"></a>
+            <a href="#" class="fa fa-linkedin"></a>
+            <a href="#" class="fa fa-google"></a>
+        </div>
     </footer>
 
 
@@ -176,10 +185,11 @@
 
     <!-- <pre id="senate-data"></pre> -->
 
-    <script src="./js/pro-congress-113-house.js"></script>
+    <!-- <script src="./js/pro-congress-113-house.js"></script>
     <script src="./js/main.js"></script>
     <script src="/Users/christianbaidoo/Desktop/TGIF/js/statistics.js"></script>
-    <script src="/Users/christianbaidoo/Desktop/TGIF/js/loyal.js"></script>
+    <script src="/Users/christianbaidoo/Desktop/TGIF/js/loyal.js"></script> -->
+    <script src="./newtest.js"></script>
 
 
     <!-- jQuery library -->
