--- a/house-party-loyalty.html
+++ b/house-party-loyalty.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Senate Party Loyalty</title>
+    <title>House Party Loyalty</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
@@ -123,7 +123,7 @@
                     <table class="table table-bordered table-striped">
                         <thead>
                             <tr class="navy-blue">
-                                <th class="font-white">Party</th>
+                                <th class="font-white">Name</th>
                                 <th class="font-white">Nº of Votes with Party</th>
                                 <th class="font-white">% Party Votes</th>
                             </tr>
@@ -143,7 +143,7 @@
                     <table class="table table-bordered table-striped">
                         <thead>
                             <tr class="navy-blue">
-                                <th class="font-white">Party</th>
+                                <th class="font-white">Name</th>
                                 <th class="font-white">Nº of Votes with Party</th>
                                 <th class="font-white">% Party Votes</th>
                             </tr>
@@ -154,12 +154,16 @@
                     </table>
 
 
+
+
                 </div>
 
 
             </div>
 
         </div>
+        <div id="loader"></div>
+
     </section>
 
 
@@ -175,6 +179,12 @@
     <footer class="page-footer font-small blue">
         <div class="footer-copyright text-center py-3"> &copy; 2019 Copyright: All Rights Reserved
         </div>
+        <div class="social">
+            <a href="#" class="fa fa-facebook"></a>
+            <a href="#" class="fa fa-twitter"></a>
+            <a href="#" class="fa fa-linkedin"></a>
+            <a href="#" class="fa fa-google"></a>
+        </div>
     </footer>
 
 
@@ -184,10 +194,10 @@
 
     <!-- <pre id="senate-data"></pre> -->
 
-    <script src="./js/pro-congress-113-house.js"></script>
+    <!-- <script src="./js/pro-congress-113-house.js"></script>
     <script src="./js/main.js"></script>
-    <script src="/Users/christianbaidoo/Desktop/TGIF/js/statistics.js"></script>
-    <script src="/Users/christianbaidoo/Desktop/TGIF/js/loyal.js"></script>
+    <script src="/Users/christianbaidoo/Desktop/TGIF/js/statistics.js"></script> -->
+    <script src="./newtest.js"></script>
 
     <!-- jQuery library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
