--- a/senate-data.html
+++ b/senate-data.html
@@ -91,7 +91,8 @@
     <!-- table-striped table hover -->
 
     <form class="checkbox">
-        Filter by:
+        <span class="font-italic">Filter by:</span> &ensp;
+
         <input type="checkbox" id="republican" class="checkbox">
         <label for="republican">Republican</label>
         <input type="checkbox" id="democrat">
@@ -145,6 +146,12 @@
 
     <footer class="page-footer font-small blue">
         <div class="footer-copyright text-center py-3"> &copy; 2019 Copyright: All Rights Reserved
+        </div>
+        <div class="social">
+            <a href="#" class="fa fa-facebook"></a>
+            <a href="#" class="fa fa-twitter"></a>
+            <a href="#" class="fa fa-linkedin"></a>
+            <a href="#" class="fa fa-google"></a>
         </div>
     </footer>
 
