--- a/house-data.html
+++ b/house-data.html
@@ -84,14 +84,10 @@
 
     </div>
 
-    <!-- <section class="card">
-        <div class="card-body">
-            <h2 classs="card-title">Congressmen</h2>
 
-        </div>
-    </section> -->
+    <form class="checkbox">
+        <span class="font-italic">Filter by:</span> &ensp;
 
-    <form class="checkbox"> Filter by Party:
         <input type="checkbox" id="republican" class="checkbox">
         <label for="republican">Republican</label>
         <input type="checkbox" id="democrat">
@@ -146,7 +142,7 @@
             <a href="#" class="fa fa-facebook"></a>
             <a href="#" class="fa fa-twitter"></a>
             <a href="#" class="fa fa-linkedin"></a>
-
+            <a href="#" class="fa fa-google"></a>
         </div>
     </footer>
 
