--- a/index.html
+++ b/index.html
@@ -145,8 +145,14 @@
   </div>
 
 
-  <footer class="page-footer font-small">
-    <div class="footer-copyright text-center py-4"> © 2019 Copyright: All Rights Reserved
+  <footer class="page-footer font-small blue">
+    <div class="footer-copyright text-center py-3"> &copy; 2019 Copyright: All Rights Reserved
+    </div>
+    <div class="social">
+      <a href="#" class="fa fa-facebook"></a>
+      <a href="#" class="fa fa-twitter"></a>
+      <a href="#" class="fa fa-linkedin"></a>
+      <a href="#" class="fa fa-google"></a>
     </div>
   </footer>
 
