--- a/senate-attendance.html
+++ b/senate-attendance.html
@@ -118,8 +118,8 @@
                     <table class="table table-bordered table-striped">
                         <thead>
                             <tr class="navy-blue">
-                                <th class="column width_1 font-white">Party</th>
-                                <th class="column width_1 font-white">Number of Missed Votes</th>
+                                <th class="column width_1 font-white">Name</th>
+                                <th class="column width_1 font-white">Nº of Missed Votes</th>
                                 <th class="column width_1 font-white">% Missed</th>
                             </tr>
                         </thead>
@@ -132,14 +132,15 @@
 
                 </div>
 
+
                 <div class="col-md-6 col-sm-6 mb-30px">
                     <h4>Most Engaged (Top 10% Attendance)</h4>
 
                     <table class="table table-bordered table-striped">
                         <thead>
                             <tr class="navy-blue">
-                                <th class="column width_1 font-white">Party</th>
-                                <th class="column width_1 font-white">Number of Missed Votes</th>
+                                <th class="column width_1 font-white">Name</th>
+                                <th class="column width_1 font-white">Nº of Missed Votes</th>
                                 <th class="column width_1 font-white">% Missed</th>
                             </tr>
                         </thead>
@@ -155,6 +156,8 @@
             </div>
 
         </div>
+        <div id="loader"></div>
+
     </section>
 
 
@@ -170,6 +173,12 @@
     <footer class="page-footer font-small blue">
         <div class="footer-copyright text-center py-3"> &copy; 2019 Copyright: All Rights Reserved
         </div>
+        <div class="social">
+            <a href="#" class="fa fa-facebook"></a>
+            <a href="#" class="fa fa-twitter"></a>
+            <a href="#" class="fa fa-linkedin"></a>
+            <a href="#" class="fa fa-google"></a>
+        </div>
     </footer>
 
 
@@ -177,8 +186,8 @@
 
     <!-- <script src="./js/pro-congress-113-senate.js"></script>
     <script src="./js/main.js"></script> -->
-    <script src="/Users/christianbaidoo/Desktop/TGIF/newtest.js"></script>
-    <script src="/Users/christianbaidoo/Desktop/TGIF/js/statistics.js"></script>
+    <script src="./newtest.js"></script>
+    <!-- <script src="/Users/christianbaidoo/Desktop/TGIF/js/statistics.js"></script> -->
 
     <!-- jQuery library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
