--- a/senate-party-loyalty.html
+++ b/senate-party-loyalty.html
@@ -105,7 +105,7 @@
 
                 <div class="col-md-6 col-sm-6">
                     <div class="text-aling-right"></div>
-                    <h4>House at a glance</h4>
+                    <h4>Senate at a glance</h4>
 
                     <table class="table table-bordered table-striped">
                         <thead>
@@ -132,7 +132,7 @@
                     <table class="table table-bordered table-striped">
                         <thead>
                             <tr class="navy-blue">
-                                <th class="column width_1 font-white">Party</th>
+                                <th class="column width_1 font-white">Name</th>
                                 <th class="column width_1 font-white">Nº of Votes with Party</th>
                                 <th class="column width_1 font-white">% Party Votes</th>
                             </tr>
@@ -152,7 +152,7 @@
                     <table class="table table-bordered table-striped">
                         <thead>
                             <tr class="navy-blue">
-                                <th class="column width_1 font-white">Party</th>
+                                <th class="column width_1 font-white">Name</th>
                                 <th class="column width_1 font-white">Nº of Votes with Party</th>
                                 <th class="column width_1 font-white">% Party Votes</th>
                             </tr>
@@ -161,14 +161,14 @@
 
                         </tbody>
                     </table>
-
-
                 </div>
 
 
             </div>
 
         </div>
+        <div id="loader"></div>
+
     </section>
 
 
@@ -180,8 +180,14 @@
     </div>
 
 
-    <footer class="page-footer font-small mt-30">
-        <div class="footer-copyright text-center py-5"> © 2019 Copyright: All Rights Reserved
+    <footer class="page-footer font-small blue">
+        <div class="footer-copyright text-center py-3"> &copy; 2019 Copyright: All Rights Reserved
+        </div>
+        <div class="social">
+            <a href="#" class="fa fa-facebook"></a>
+            <a href="#" class="fa fa-twitter"></a>
+            <a href="#" class="fa fa-linkedin"></a>
+            <a href="#" class="fa fa-google"></a>
         </div>
     </footer>
 
@@ -190,10 +196,11 @@
 
 
 
-    <script src="./js/pro-congress-113-senate.js"></script>
+    <!-- <script src="./js/pro-congress-113-senate.js"></script>
     <script src="./js/main.js"></script>
     <script src="./js/statistics.js"></script>
-    <script src="/Users/christianbaidoo/Desktop/TGIF/js/loyal.js"></script>
+    <script src="/Users/christianbaidoo/Desktop/TGIF/js/loyal.js"></script> -->
+    <script src="./newtest.js"></script>
 
 
     <!-- jQuery library -->
