--- a/house-attendance.html
+++ b/house-attendance.html
@@ -161,10 +161,10 @@
 
     </section>
 
-
-    <div class="top">
-        <a href="#top">Back to the top</a>
-    </div>
+    <br>
+    <button type="button" class="btn btn-info" data-target="#top"><a href="#top" class="font-white text-deco"> Back to
+            the top</a>
+    </button>
 
 
     <footer class="page-footer font-small blue">
@@ -185,10 +185,7 @@
 
     <!-- <pre id="senate-data"></pre> -->
 
-    <!-- <script src="./js/pro-congress-113-house.js"></script>
-    <script src="./js/main.js"></script>
-    <script src="/Users/christianbaidoo/Desktop/TGIF/js/statistics.js"></script>
-    <script src="/Users/christianbaidoo/Desktop/TGIF/js/loyal.js"></script> -->
+
     <script src="./newtest.js"></script>
 
 
