--- a/house-data.html
+++ b/house-data.html
@@ -132,7 +132,8 @@
 
 
 
-    <button type="button" class="btn btn-info" data-target="#top"><a href="#top" class="font-white"> Back to the top</a>
+    <button type="button" class="btn btn-info" data-target="#top"><a href="#top" class="font-white text-deco"> Back to
+            the top</a>
     </button>
 
     <footer class="page-footer font-small blue">
