--- a/house-party-loyalty.html
+++ b/house-party-loyalty.html
@@ -168,12 +168,12 @@
 
 
 
+    <br>
 
 
-
-    <div class="top">
-        <a href="#top">Back to the top</a>
-    </div>
+    <button type="button" class="btn btn-info" data-target="#top"><a href="#top" class="font-white text-deco"> Back to
+            the top</a>
+    </button>
 
 
     <footer class="page-footer font-small blue">
@@ -192,11 +192,8 @@
 
 
 
-    <!-- <pre id="senate-data"></pre> -->
 
-    <!-- <script src="./js/pro-congress-113-house.js"></script>
-    <script src="./js/main.js"></script>
-    <script src="/Users/christianbaidoo/Desktop/TGIF/js/statistics.js"></script> -->
+
     <script src="./newtest.js"></script>
 
     <!-- jQuery library -->
