--- a/senate-attendance.html
+++ b/senate-attendance.html
@@ -160,14 +160,11 @@
 
     </section>
 
+    <br>
+    <button type="button" class="btn btn-info" data-target="#top"><a href="#top" class="font-white text-deco"> Back to
+            the top</a>
+    </button>
 
-
-
-    <button type="button" class="btn btn-info" data-target="#top">Back to the top</button>
-
-    <!-- <div class="top">
-        <a href="#top"></a>
-    </div> -->
 
 
     <footer class="page-footer font-small blue">
@@ -187,7 +184,6 @@
     <!-- <script src="./js/pro-congress-113-senate.js"></script>
     <script src="./js/main.js"></script> -->
     <script src="./newtest.js"></script>
-    <!-- <script src="/Users/christianbaidoo/Desktop/TGIF/js/statistics.js"></script> -->
 
     <!-- jQuery library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
