--- a/senate-data.html
+++ b/senate-data.html
@@ -82,9 +82,6 @@
         </p>
     </div>
 
-    <!-- <section class="card">
-        <div class="card-body">
-    </section> -->
 
 
     <!-- https://www.linkedin.com/learning/bootstrap-4-essential-training/table-styles-3 -->
@@ -101,10 +98,7 @@
         <label for="independent">Independent</label>
     </form>
 
-    <!-- <div class="custom-control custom-checkbox custom-control-inline">
-        <input type="checkbox" class="custom-control-input" id="defaultInline1">
-        <label class="custom-control-label" for="defaultInline1">Testere 4</label>
-    </div> -->
+
 
     <table class="table table-bordered table-striped">
 
@@ -115,9 +109,6 @@
                 State
                 <div>
                     <select name="Filter by state" id="select-filter">
-                        <!-- <option selected="selected">Select Your Beverage</option> -->
-                        <!-- <option value="none" selected disabled="selected">
-                            Filter by state </option> -->
                         <option value="all">All</option>
                     </select>
                 </div>
@@ -131,20 +122,13 @@
     </table>
     <div id="loader"></div>
 
-    <button type="button" class="btn btn-info" data-target="#top"><a href="#top" class="font-white"> Back to the top</a>
+    <button type="button" class="btn btn-info" data-target="#top"><a href="#top" class="font-white text-deco"> Back to
+            the top</a>
     </button>
 
-    <!-- <button type="button" class="btn btn-info" data-target="#history"><a href="#top"></a></button> -->
 
 
-
-
-    <!-- <div class="top">
-        <a href="#top">Back to the top</a>
-    </div> -->
-
-
-    <footer class="page-footer font-small blue">
+    <footer class="page-footer font-small">
         <div class="footer-copyright text-center py-3"> &copy; 2019 Copyright: All Rights Reserved
         </div>
         <div class="social">
@@ -164,7 +148,7 @@
 
     <!-- <script src="./js/pro-congress-113-senate.js"></script>
     <script src="./js/main.js"></script> -->
-    <script src="/Users/christianbaidoo/Desktop/TGIF/newtest.js"></script>
+    <script src="./newtest.js"></script>
 
 
     <!-- jQuery library -->
