--- a/senate-party-loyalty.html
+++ b/senate-party-loyalty.html
@@ -171,13 +171,13 @@
 
     </section>
 
+    <br>
 
 
 
-
-    <div class="top pt-4">
-        <a href="#top">Back to the top</a>
-    </div>
+    <button type="button" class="btn btn-info" data-target="#top"><a href="#top" class="font-white text-deco"> Back to
+            the top</a>
+    </button>
 
 
     <footer class="page-footer font-small blue">
