--- a/index.html
+++ b/index.html
@@ -163,8 +163,8 @@
 
 
 
-  <script src="./js/pro-congress-113-senate.js"></script>
-  <script src="./js/main.js"></script>
+
+  <script src="./newtest.js"></script>
 
   <!-- jQuery library -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
